@@ -341,6 +341,8 @@ Branch-2 ( Unreleased changes )
 
     HDFS-3665. Add a test for renaming across file systems via a symlink. (eli)
 
+    HDFS-3666. Plumb more exception messages to terminate. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
